# nccsf

./: .gitignore  README.md  THIRD_PARTY_NOTICE.md  base_noncensored_model.py  final_censored_model.py  final_noncensored_model.py  proper_censored_baseline.py  pyproject.toml  requirements.txt  strict_censored_baseline.py
Archive/: _direct_grf_imports.py  paper_csf_dgp.py  run_paper_final_model_simulation.py  run_paper_grf_csf_direct.R  run_rhc_probability_comparison.py
censored/: README.md
data/: reference_grf_master_predictions.csv  reference_input.csv
docs/: FINAL_MODEL_ARCHITECTURE.md  FINAL_MODEL_EXPECTED_BASIC12.json  FINAL_MODEL_KEEP_DELETE_MANIFEST.md  R_BASELINE_SETUP.md
final_result/: README.txt  combined_4model_results.csv  final_conditional_results.csv  final_model_oracle_results.csv  manifest.csv  r_csf_results.csv  revised_conditional_results.csv
non_censored/: README.md
scripts/: build_native.py  compare_with_reference.py  evaluate_subgroup_bias_censored.py  generate_slide_metric_boxplots.py  generate_slide_summary_tables.py  launch_14setting_unified_b2sum_final5.py  materialize_synthetic_datasets.py  preprocess_rhc.py  reassign_q1_follow_s09_s13.sh  render_14setting_oldc3_dml_candidates.py  render_basic12_five_model_bundle.py  render_basic12_oldc3_ablation_censored.py  render_basic12_oldc3_ablation_non_censored.py  render_horizon_final_vs_revised_conditional_summary.py  render_non_censored_pci_model_overview.py  render_oldc3_summary_comparison_tables.py  render_paper_style_horizon_conditional_pngs.py  render_structured_five_model_bundle.py  (+80 more)
(+793 files in other folders)
