[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "csf-grf"
version = "0.1.0"
description = "Minimal causal survival forest project extracted from grf."
requires-python = ">=3.10"
dependencies = [
  "econml",
  "lifelines",
  "matplotlib",
  "numpy",
  "pandas",
  "scikit-learn",
  "scikit-survival",
  "scipy",
]

[tool.setuptools]
package-dir = {"" = "python-package"}

[tool.setuptools.packages.find]
where = ["python-package"]
